// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavDrawer snapshots renders default props 1`] = `
<nav
  className="drawer"
>
  <Hidden
    implementation="css"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={true}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(Drawer)
      ModalProps={
        Object {
          "keepMounted": true,
        }
      }
      anchor="left"
      classes={
        Object {
          "paper": "drawerPaper",
        }
      }
      onClose={[Function]}
      variant="temporary"
    >
      <WithStyles(DrawerContent)
        items={Array []}
      />
    </WithStyles(Drawer)>
  </Hidden>
  <Hidden
    implementation="css"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={false}
    smDown={true}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(Drawer)
      classes={
        Object {
          "paper": "drawerPaper",
        }
      }
      open={true}
      variant="permanent"
    >
      <WithStyles(DrawerContent)
        items={Array []}
      />
    </WithStyles(Drawer)>
  </Hidden>
</nav>
`;

exports[`NavDrawer snapshots renders with items 1`] = `
<nav
  className="drawer"
>
  <Hidden
    implementation="css"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={true}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(Drawer)
      ModalProps={
        Object {
          "keepMounted": true,
        }
      }
      anchor="left"
      classes={
        Object {
          "paper": "drawerPaper",
        }
      }
      onClose={[Function]}
      variant="temporary"
    >
      <WithStyles(DrawerContent)
        items={
          Array [
            Object {
              "Icon": [MockFunction],
              "isRouteExact": true,
              "label": "Home",
              "page": [MockFunction],
              "to": "/",
            },
            Object {
              "Icon": [MockFunction],
              "isRouteExact": false,
              "label": "About me",
              "page": [MockFunction],
              "to": "/about",
            },
          ]
        }
      />
    </WithStyles(Drawer)>
  </Hidden>
  <Hidden
    implementation="css"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={false}
    smDown={true}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(Drawer)
      classes={
        Object {
          "paper": "drawerPaper",
        }
      }
      open={true}
      variant="permanent"
    >
      <WithStyles(DrawerContent)
        items={
          Array [
            Object {
              "Icon": [MockFunction],
              "isRouteExact": true,
              "label": "Home",
              "page": [MockFunction],
              "to": "/",
            },
            Object {
              "Icon": [MockFunction],
              "isRouteExact": false,
              "label": "About me",
              "page": [MockFunction],
              "to": "/about",
            },
          ]
        }
      />
    </WithStyles(Drawer)>
  </Hidden>
</nav>
`;
